--- a/src/Demo/Hello.cls
+++ b/src/Demo/Hello.cls
@@ -3,7 +3,7 @@ Class Demo.Hello
 
 ClassMethod SayHi()
 {
-        Write "Just saying Hi TO PROD", !
+        Write "Just saying Hi at 18:25", !
 }
 
 }
